--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appnope==0.1.2
 autopep8==1.5.5
 backcall==0.2.0
+cffi==1.15.0
 decorator==4.4.2
 ipykernel==5.5.0
 ipython==7.22.0
@@ -8,17 +9,25 @@ ipython-genutils==0.2.0
 jedi==0.18.0
 jupyter-client==6.1.12
 jupyter-core==4.7.1
+numpy==1.21.3
 parso==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.4.0
 prompt-toolkit==3.0.18
 ptyprocess==0.7.0
 pycodestyle==2.6.0
+pycparser==2.20
 Pygments==2.8.1
 python-dateutil==2.8.1
 pyzmq==22.0.3
 six==1.15.0
+SoundFile==0.10.3.post1
 toml==0.10.2
+torch==1.10.0
+torchvision==0.11.1
 tornado==6.1
+tqdm==4.62.3
 traitlets==5.0.5
+typing-extensions==3.10.0.2
 wcwidth==0.2.5
